[project]
name = "opengemini-client-python-application"
version = "0.0.2"
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "blockcontent>=0.2.0",
    "opengemini-client-python>=0.1.0",
    "langchain>=1.1.0",
    "opendal>=0.46.0",
]

[project.urls]
Homepage = "https://github.com/git-org-name/git-repo-name"
Repository = "https://github.com/git-org-name/git-repo-name"
Documentation = "https://github.com/git-org-name/git-repo-name#readme"

[tool.mypy]
python_version = "3.9"

[tool.ruff]
line-length = 120
